--- a/speechd-api/src/tests/.deps/connection-recovery.Po
+++ b/speechd-api/src/tests/.deps/connection-recovery.Po
@@ -4,7 +4,7 @@ connection-recovery.o: connection-recovery.c /usr/include/stdc-predef.h \
  /usr/include/i386-linux-gnu/bits/wordsize.h \
  /usr/include/i386-linux-gnu/gnu/stubs.h \
  /usr/include/i386-linux-gnu/gnu/stubs-32.h \
- /usr/lib/gcc/i686-linux-gnu/4.8/include/stddef.h \
+ /usr/lib/gcc/i686-linux-gnu/5/include/stddef.h \
  /usr/include/i386-linux-gnu/bits/waitflags.h \
  /usr/include/i386-linux-gnu/bits/waitstatus.h /usr/include/endian.h \
  /usr/include/i386-linux-gnu/bits/endian.h \
@@ -23,7 +23,7 @@ connection-recovery.o: connection-recovery.c /usr/include/stdc-predef.h \
  /usr/include/i386-linux-gnu/bits/stdlib-bsearch.h \
  /usr/include/i386-linux-gnu/bits/stdlib-float.h \
  /usr/include/i386-linux-gnu/bits/stdlib.h /usr/include/wchar.h \
- /usr/include/stdio.h /usr/lib/gcc/i686-linux-gnu/4.8/include/stdarg.h \
+ /usr/include/stdio.h /usr/lib/gcc/i686-linux-gnu/5/include/stdarg.h \
  /usr/include/i386-linux-gnu/bits/wchar.h /usr/include/xlocale.h \
  /usr/include/i386-linux-gnu/bits/wchar2.h /usr/include/wctype.h \
  ../../src/c/api/libspeechd.h /usr/include/libio.h \
@@ -59,7 +59,7 @@ connection-recovery.o: connection-recovery.c /usr/include/stdc-predef.h \
 
 /usr/include/i386-linux-gnu/gnu/stubs-32.h:
 
-/usr/lib/gcc/i686-linux-gnu/4.8/include/stddef.h:
+/usr/lib/gcc/i686-linux-gnu/5/include/stddef.h:
 
 /usr/include/i386-linux-gnu/bits/waitflags.h:
 
@@ -107,7 +107,7 @@ connection-recovery.o: connection-recovery.c /usr/include/stdc-predef.h \
 
 /usr/include/stdio.h:
 
-/usr/lib/gcc/i686-linux-gnu/4.8/include/stdarg.h:
+/usr/lib/gcc/i686-linux-gnu/5/include/stdarg.h:
 
 /usr/include/i386-linux-gnu/bits/wchar.h:
 
