--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+7.7: Speak sing alphabet with Huang voice.
 7.6: Fix English sample rate issue when Chinese voice sample rate is not
 16000.
 7.4: Toisanese is supported.
