--- a/INSTALL
+++ b/INSTALL
@@ -5,8 +5,12 @@ $ ./autogen.sh
 $ sudo apt install libsndfile1-dev libespeak-dev libpulse-dev
 $ cd ekho-data
 $ wget https://sourceforge.net/projects/e-guidedog/files/Ekho-Voice-Data/0.2/pinyin-yali-44100-v9.tar.bz2
+$ tar zxvf pinyin-yali-44100-v9.tar.bz2
+$ ln -s pinyin-yali pinyin
+$ cd ../
 $ ./configure
 $ make
+$ ./ekho 123
 
 ===== INSTALL (for Linux) =====
 You need to have following libraries first:
