Update URLs, because the people.*.cam.ac.uk servers were permanently switched off last Friday with no redirector

--- a/README
+++ b/README
@@ -4,9 +4,9 @@ Currently, it can speak Cantonese, Mandarin, Hakka, Tibetan, Ngangien and Englis
 
 Author: Cameron Wong (hgneng at gmail.com), http://www.eguidedog.net
 
-Special thanks to Silas S. Brown (http://people.pwf.cam.ac.uk/ssb22/) for his great contribution to Mandarin and Korean support of Ekho!
+Special thanks to Silas S. Brown (http://ssb22.user.srcf.net/) for his great contribution to Mandarin and Korean support of Ekho!
 
-Many thanks to Yali Cheng for contributing a Mandarin voice, Liao Weicheng for contributing Hakka voice, Hae-Sung Jeon (http://people.pwf.cam.ac.uk/hsj24/) for contributing a Korean voice, Trinley Pedron and Tennom YK for contributing Tibetan voice and Zhao Qianshan for contributing Ngangien voice!
+Many thanks to Yali Cheng for contributing a Mandarin voice, Liao Weicheng for contributing Hakka voice, Hae-Sung Jeon (https://www.uclan.ac.uk/staff_profiles/hae-sung_jeon.php) for contributing a Korean voice, Trinley Pedron and Tennom YK for contributing Tibetan voice and Zhao Qianshan for contributing Ngangien voice!
 
 For LICENSE information of Ekho, please refer to the file COPYING.
 
