--- a/speechd-api/diff/README
+++ b/speechd-api/diff/README
@@ -4,31 +4,26 @@ commit src/modules/Makefile.am
 $ git pull
 a lot diff ...
 
-##### Download and install Dotconf-1.3 for building speechd #####
-latest speechd needs a dotconf-1.3 which only exists on git:
-https://github.com/williamh/dotconf/tags
-$ autoreconf
-$ automake
-$ ./configure && make && make install
-
-##### setup speechd ENV #####
-Download speech-0.7.1 (same to Ubuntu 12.04) from http://devel.freebsoft.org/speechd
-$ sudo apt-get install libdotconf-dev libglib2.0-dev
-$ ./configure && make
-git clone speechd
-git checkout 0.7.1 (tag)
-$ autoreconf
-$ autoconf
-$ automake
-$ ./configure && make
-sd_ekho will be generated
-
 ##### patch files #####
 replace file from diff/
 * speechd/config/modules/ekho.conf
 * speechd/src/modules/ekho.cc
 * speechd/src/modules/Makefile.am
-* speechd/src/python/speech_config/config.py
+
+add following libs definition to speechd/configure.ac:
+
+LIB_PULSEAUDIO=""
+CFLAG_PULSEAUDIO=""
+AS_IF([test "x$with_pulseaudio" != xno],
+        [AC_CHECK_LIB([pulse], [main],
+            [AC_SUBST([LIB_PULSEAUDIO], ["`pkg-config --libs libpulse-simple`"])
+            AC_SUBST([CFLAG_PULSEAUDIO], ["`pkg-config --cflags libpulse-simple`"])
+            AC_DEFINE([HAVE_PULSEAUDIO], [1],
+                [Define if you have libpulse])
+            ],
+            [AC_MSG_FAILURE(
+                [pulseaudio test failed (--without-pulseaudio to disable)])],
+            [])])
 
 ##### configure speech-dispatcher #####
 install ekho
