--- a/speechd-api/diff/README
+++ b/speechd-api/diff/README
@@ -3,7 +3,7 @@ replace file from diff/
 * speechd/config/modules/ekho.conf
 * speechd/src/modules/ekho.cc
 * speechd/src/modules/Makefile.am
-* src/api/python/speechd_config/config.py.in
+* src/api/python/speechd_config/config.py.in (will install to /usr/lib/python3.8/site-packages/speechd_config/config.py)
 
 add following libs definition to speechd/configure.ac:
 
