--- a/sonic/sonic.1
+++ b/sonic/sonic.1
@@ -14,6 +14,12 @@ speech files.  Additionally, sonic can change the pitch and volume.
 
 .SH OPTIONS
 .TP
+.B \-c
+Modify pitch by emulating vocal chords vibrating faster or slower.  This causes
+more distortion than the default pitch scaling, but sounds more like the same
+person trying to talk higher or lower.  The default pitch changes makes the
+voice sound like a larger or smaller person, but introduces little distortion.
+.TP
 .B \-p pitch
 Set pitch scaling factor.  1.3 means 30%% higher.
 .TP
@@ -22,7 +28,7 @@ Disable all speed-up heuristics, possibly improving the quality slightly.  This
 is mainly used for debugging the speed-up heuristics.
 .TP
 .B \-r rate
-Adjust the speed of playback.  This sales both the pitch and speed equally.
+Adjust the speed of playback.  This scales both the pitch and speed equally.
 .TP
 .B \-s speed
 Set speed up factor.  1.0 means no change, 2.0 means 2X faster.
@@ -50,4 +56,4 @@ This would make a low voice sound very high pitched.
 .SH AUTHOR 
 Bill Cox waywardgeek@gmail.com
 .BR
-Sonic Version 0.1, Copyright 2010, Bill Cox, GPL license
+Sonic Version 0.2, Copyright 2010, Bill Cox, Apache 2.0 license
