--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
+8.5: Support MacOS (pulseaudio needed)
 8.4: Support speech-dispatcher 0.9. Fix issue of English too fast when Chinese is set a base rate. Treat space not a Chinese symbol if it's within English Text. Improve punctuation reading.
-7.7: Speak sing alphabet with Huang voice.
+7.7: Speak single alphabet with Huang voice.
 7.6: Fix English sample rate issue when Chinese voice sample rate is not
 16000.
 7.4: Toisanese is supported.
