upgrade ekho for speechd-0.11.0-rc4

--- a/speechd-api/diff/README
+++ b/speechd-api/diff/README
@@ -1,9 +1,9 @@
 ##### patch files #####
 replace file from diff/
 * speechd/config/modules/ekho.conf
-* speechd/src/modules/ekho.cc
+* speechd/src/modules/ekho.cpp
 * speechd/src/modules/Makefile.am
-* src/api/python/speechd_config/config.py.in (will install to /usr/lib/python3.8/site-packages/speechd_config/config.py)
+???* src/api/python/speechd_config/config.py.in (will install to /usr/lib/python3.8/site-packages/speechd_config/config.py)
 * speechd/configure.ac
 
 add following libs definition to speechd/configure.ac:
