--- a/INSTALL
+++ b/INSTALL
@@ -12,6 +12,9 @@ $ ./configure
 $ make CXXFLAGS=-O0
 $ ./ekho 123
 
+If you have installed version Ekho and you want to use voice data in working directory, you should set EKHO_DATA_PATH like this:
+$ env EKHO_DATA_PATH=ekho-data ./ekho 123
+
 ===== INSTALL (for Linux) =====
 You need to have following libraries first:
 * libespeak-ng-dev
